lab1/Test/L1-A-4-58.cmm
float B4ZeGkhl5J0VBxkAkXC4 ( ) {
  struct fx0Q9kXpeM {
  }mOydQWEP13JC 
  int Uhrnd8V06Ougs6 ;
  if Ca3GmRNWQ3RWiz6ChczB )   oRa2HSAN6R 

}
while ! 